# shisaku-survey-machinelearning

./: README.md  pyproject.toml
src/: main.ipynb  main.py
src/.ipynb_checkpoints/: main-checkpoint.ipynb
src/machinelearning/: __init__.py
