[project]
name = "machinelearning"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Nakaya", email = "eniehack@outlook.jp" }
]
dependencies = [
    "scikit-learn==1.3",
    "notebook>=7.0.0",
    "seaborn>=0.12.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
